[package]
name = "worktile_cli"
description = "Command Line Interface for Worktile"
version = "0.1.0"
authors = ["Shaun Xu <jfarrio@gmail.com>"]
edition = "2018"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
clap = "2.33.1"
chrono = { version = "0.4.11", features = ["serde"] }
toml = "0.5.6"